modified:   CMakeLists.txt modified:   Channel.cc 	modified:   Channel.h 	modified:   Eventloop.cc 	modified:   Eventloop.h 	modified:   Poll.cc 	new file:   Timer.cc 	new file:   Timer.h 	new file:   TimerQueue.cc 	modified:   TimerQueue.h 	modified:   test.cc

--- a/Reactor/net/CMakeLists.txt
+++ b/Reactor/net/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(reactor_net Channel Eventloop Poll)
+add_library(reactor_net Channel Eventloop Poll TimerQueue Timer)
 install(TARGETS reactor_net DESTINATION lib)
 file(GLOB Cpp ".h")
 install(FILES ${Cpp} DESTINATION include/net)
