--- a/Reactor/net/CMakeLists.txt
+++ b/Reactor/net/CMakeLists.txt
@@ -1,7 +1,10 @@
-add_library(reactor_net Channel Eventloop Poll TimerQueue Timer)
+add_library(wrapper_net wrapper) 
+add_library(reactor_net Channel Eventloop Poll TimerQueue Timer Acceptor TcpServer TcpConnection)
 install(TARGETS reactor_net DESTINATION lib)
 file(GLOB Cpp ".h")
 install(FILES ${Cpp} DESTINATION include/net)
 
-add_executable(test00 test.cc)
-target_link_libraries(test00 reactor_net)
+add_executable(test02 test02.cc)
+target_link_libraries(test02 pthread)
+target_link_libraries(test02 reactor_net)
+target_link_libraries(test02 wrapper_net)
